<resources>
    <string name="app_name">ErikNevileAD340</string>
    <string name="enter_text">Enter Some Text</string>

    <string name="send_text">Send</string>
    <string name="nav_about">About</string>
    <string name="nav_home">Home</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_traffic">Traffic</string>
    <string name="nav_settings">Settings</string>
    <string name="navigation_drawer_open">Open Nav Drawer</string>
    <string name="navigation_drawer_close">Close Nav Drawer</string>
    <string name="about">About My Application</string>
    <string name="about_message">This application contains a home page with its title, a navigation
    button, a field where text can be entered along with a send button, and four icons in a grid view.
    If a user enters text into the text field, then hits send, a secondary activity will be displayed
    where the text which was entered is shown. If the user clicks on the top left grid view icon, they
    will be taken to a RecyclerView list of different zombie movies, which can be clicked on to learn
    further information about which ever movie. Thanks for checking it out!</string>

    <string name="apiKey">AIzaSyDtvQkTYsbTZdjXi0o-rhVxfCa-w-ber8s</string>


    <string name="send_message">Send</string>

</resources>
