<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

        <item android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about" />

        <item android:id="@+id/nav_movies"
            android:icon="@drawable/ic_movies"
            android:title="@string/nav_movies" />

        <item android:id="@+id/nav_traffic"
            android:icon="@drawable/ic_traffic"
            android:title="@string/nav_traffic" />


    </group>

    <item android:title="More">

        <menu>

            <item android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings"/>
        </menu>

    </item>

</menu>